--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ convention = "google"
 known-first-party = ["mogemma", "tests"]
 split-on-trailing-comma = false
 
+[tool.ruff.lint.per-file-ignores]
+"src/py/smoke_test.py" = ["T201", "INP001", "ANN201"]
+
 [tool.mypy]
 exclude = ["tmp/", ".tmp/"]
 packages = ["mogemma", "tests"]
