--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,19 @@ dependencies = [
     "huggingface-hub>=0.20.0",
 ]
 
+[project.scripts]
+mogemma = "mogemma.cli:cli"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/py/mogemma"]
+
+[tool.uv]
+package = true
+
 [tool.pytest.ini_options]
 testpaths = ["src/py/tests"]
 pythonpath = ["src/py"]
