--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "psutil>=5.9.0",
     "tqdm>=4.66.0",
     "huggingface-hub>=0.20.0",
+    "protobuf>=6.33.5",
+    "opentelemetry-api>=1.39.1",
+    "opentelemetry-sdk>=1.39.1",
 ]
 
 [project.scripts]
@@ -81,4 +84,5 @@ dev = [
     "ruff>=0.14.14",
     "pytest>=9.0.2",
     "pytest-cov>=4.0.0",
+    "pytest-asyncio>=1.3.0",
 ]
