--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,7 @@ name = "mogemma"
 version = "0.1.0"
 description = "Ultra-modern Python/Mojo bridge for Google Gemma 3"
 requires-python = ">=3.10"
-dependencies = [
-    "mojo>=0.26.1",
-]
+dependencies = []
 
 [project.optional-dependencies]
 embed = [
@@ -20,10 +18,6 @@ hub = [
 ]
 telemetry = [
     "opentelemetry-api>=1.39.1",
-]
-vision = [
-    "numpy>=1.26.0",
-    "tokenizers>=0.15.0",
 ]
 all = [
     "numpy>=1.26.0",
@@ -44,6 +38,7 @@ path = "tools/hatch_build.py"
 
 [tool.uv]
 package = true
+extra-index-url = ["https://modular.gateway.scarf.sh/simple/"]
 
 [tool.pytest.ini_options]
 testpaths = ["src/py/tests"]
@@ -77,7 +72,7 @@ known-first-party = ["mogemma", "tests"]
 split-on-trailing-comma = false
 
 [tool.ruff.lint.per-file-ignores]
-"src/py/smoke_test.py" = ["T201", "INP001", "ANN201"]
+"tools/smoke_test.py" = ["T201", "INP001", "ANN201"]
 
 [tool.mypy]
 exclude = ["tmp/", ".tmp/"]
@@ -92,9 +87,17 @@ venv = ".venv"
 
 [dependency-groups]
 dev = [
-    "mypy>=1.13.0",
-    "pyright>=1.1.386",
-    "ruff>=0.14.14",
+    {include-group = "lint"},
+    {include-group = "test"},
+    {include-group = "build"},
+]
+build = ["mojo>=0.26.1"]
+lint = ["mypy>=1.13.0", "pyright>=1.1.386", "ruff>=0.14.14"]
+test = [
+    "numpy>=1.26.0",
+    "tokenizers>=0.15.0",
+    "huggingface-hub>=0.20.0",
+    "opentelemetry-api>=1.39.1",
     "pytest>=9.0.2",
     "pytest-cov>=4.0.0",
     "pytest-asyncio>=1.3.0",
