chore: fix lint errors and format cleanup
Fix EM102/TRY003 in __init__.py, add type annotations to test_async.py,
fix PT013 import style in test_telemetry.py, add PLR2004 to ruff ignores,
run ruff format across all files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ skip-magic-trailing-comma = true
 extend-safe-fixes = ["TC"]
 fixable = ["ALL"]
 ignore = [
-  "A003", "B010", "B904", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D202", "D205", "D415", "DOC501", "E501", "PLW2901", "RUF012", "ISC001", "A005", "PLC0415", "FA100", "ANN401", "FBT001", "FBT002", "FBT003", "PLR0913", "ARG002", "ARG001", "CPY001", "RUF029", "COM812", "PGH003", "PLR0911", "PLR0912", "PLR0914", "PLR0915", "PLR0916", "PLR0917", "DOC201", "BLE001", "S101", "FIX002", "TD003", "TD002", "PYI036", "A002", "DOC202", "SLF001", "PLR0904", "PLR6301", "B903", "PLW0603", "PLW0108", "RUF067"
+  "A003", "B010", "B904", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D202", "D205", "D415", "DOC501", "E501", "PLW2901", "RUF012", "ISC001", "A005", "PLC0415", "FA100", "ANN401", "FBT001", "FBT002", "FBT003", "PLR0913", "PLR2004", "ARG002", "ARG001", "CPY001", "RUF029", "COM812", "PGH003", "PLR0911", "PLR0912", "PLR0914", "PLR0915", "PLR0916", "PLR0917", "DOC201", "BLE001", "S101", "FIX002", "TD003", "TD002", "PYI036", "A002", "DOC202", "SLF001", "PLR0904", "PLR6301", "B903", "PLW0603", "PLW0108", "RUF067"
 ]
 select = ["ALL"]
 
