--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,26 @@
 [project]
-name = "mogemma"
-version = "0.1.0"
-description = "Ultra-modern Python/Mojo bridge for Google Gemma 3"
-requires-python = ">=3.10"
+authors = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3 :: Only",
+    "Typing :: Typed",
+]
 dependencies = []
+description = "Ultra-modern Python/Mojo bridge for Google Gemma 3"
+license = "MIT"
+name = "mogemma"
+readme = "README.md"
+requires-python = ">=3.10"
+version = "0.1.0"
+
+[project.urls]
+Issue = "https://github.com/cofin/mogemma/issues/"
+Source = "https://github.com/cofin/mogemma"
 
 [project.optional-dependencies]
 embed = [
@@ -91,7 +108,7 @@ dev = [
     {include-group = "test"},
     {include-group = "build"},
 ]
-build = ["mojo>=0.26.1"]
+build = ["bump-my-version>=0.31.1", "mojo>=0.26.1"]
 lint = ["mypy>=1.13.0", "pyright>=1.1.386", "ruff>=0.14.14"]
 test = [
     "numpy>=1.26.0",
@@ -102,3 +119,35 @@ test = [
     "pytest-cov>=4.0.0",
     "pytest-asyncio>=1.3.0",
 ]
+
+[tool.bumpversion]
+allow_dirty = true
+commit = false
+commit_args = "--no-verify"
+current_version = "0.1.0"
+ignore_missing_files = false
+ignore_missing_version = false
+message = "chore(release): bump to v{new_version}"
+parse = """(?x)
+    (?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)
+    (-(?P<pre>alpha|beta|rc)\\.(?P<pre_n>\\d+))?
+"""
+regex = false
+replace = "{new_version}"
+search = "{current_version}"
+serialize = ["{major}.{minor}.{patch}", "{major}.{minor}.{patch}-{pre}.{pre_n}"]
+sign_tags = false
+tag = false
+tag_message = "chore(release): v{new_version}"
+tag_name = "v{new_version}"
+
+[tool.bumpversion.parts.pre]
+first_value = "stable"
+optional_value = "stable"
+values = ["alpha", "beta", "rc", "stable"]
+
+[tool.bumpversion.parts.pre_n]
+first_value = "1"
+
+[[tool.bumpversion.files]]
+filename = "pyproject.toml"
