--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = []
-description = "Ultra-modern Python/Mojo bridge for Google Gemma 3"
+description = "Python/Mojo interface for Google Gemma 3 using MAX Engine"
 license = "MIT"
 name = "mogemma"
 readme = "README.md"
@@ -76,9 +76,7 @@ skip-magic-trailing-comma = true
 [tool.ruff.lint]
 extend-safe-fixes = ["TC"]
 fixable = ["ALL"]
-ignore = [
-  "A003", "B010", "B904", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D202", "D205", "D415", "DOC501", "E501", "PLW2901", "RUF012", "ISC001", "A005", "PLC0415", "FA100", "ANN401", "FBT001", "FBT002", "FBT003", "PLR0913", "PLR2004", "ARG002", "ARG001", "CPY001", "RUF029", "COM812", "PGH003", "PLR0911", "PLR0912", "PLR0914", "PLR0915", "PLR0916", "PLR0917", "DOC201", "BLE001", "S101", "FIX002", "TD003", "TD002", "PYI036", "A002", "DOC202", "SLF001", "PLR0904", "PLR6301", "B903", "PLW0603", "PLW0108", "RUF067"
-]
+ignore = ["COM812"]
 select = ["ALL"]
 
 [tool.ruff.lint.pydocstyle]
@@ -90,6 +88,15 @@ split-on-trailing-comma = false
 
 [tool.ruff.lint.per-file-ignores]
 "tools/smoke_test.py" = ["T201", "INP001", "ANN201"]
+"src/py/tests/test_*.py" = [
+  "ARG001",
+  "D100",
+  "D101",
+  "D102",
+  "D103",
+  "D107",
+  "S101",
+]
 
 [tool.mypy]
 exclude = ["tmp/", ".tmp/"]
