chore: performance baseline documentation and JSON outputs for generation and embedding
- Introduced `docs/baseline-generation.json` and `docs/baseline-embedding.json` to store performance metrics for generation and embedding modes.
- Created `docs/performance-baselines.md` to outline the environment reporting contract, commands for capturing baselines, acceptance thresholds, and reporting guidelines.
- Established a `docs/release-runbook.md` to define the evidence and execution flow for the first production release, including pre-release checks and rollback procedures.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only",
     "Typing :: Typed",
 ]
-dependencies = []
+dependencies = [
+    "huggingface-hub>=0.20.0",
+]
 description = "Python/Mojo interface for Google Gemma 3 using MAX Engine"
 license = "MIT"
 name = "mogemma"
@@ -29,9 +31,6 @@ embed = [
 text = [
     "numpy>=1.26.0",
     "tokenizers>=0.15.0",
-]
-hub = [
-    "huggingface-hub>=0.20.0",
 ]
 telemetry = [
     "opentelemetry-api>=1.39.1",
