--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   lint:
@@ -82,3 +83,37 @@ jobs:
 
       - name: Test
         run: uv run pytest src/py/tests
+
+  check-release:
+    name: Release quality gate
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+
+      - name: Set up Python
+        run: uv python install 3.12
+
+      - name: Install dependencies
+        run: uv sync --all-extras --dev
+
+      - name: Ruff lint check
+        run: uv run ruff check src/py
+
+      - name: Ruff format check
+        run: uv run ruff format --check src/py
+
+      - name: Run mypy
+        run: uv run mypy
+
+      - name: Run pyright
+        run: uv run pyright
+
+      - name: Run tests
+        run: uv run pytest src/py/tests
+
+      - name: Run benchmark harness
+        run: uv run python tools/benchmark.py --mode generation --rounds 20 --max-new-tokens 64
