--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,35 +12,25 @@ classifiers = [
 ]
 dependencies = [
     "huggingface-hub>=0.20.0",
+    "numpy>=1.26.0",
+    "tokenizers>=0.15.0",
 ]
 description = "Python/Mojo interface for Google Gemma 3 using MAX Engine"
-license = "MIT"
+license = { file = "LICENSE" }
 name = "mogemma"
 readme = "README.md"
 requires-python = ">=3.10"
-version = "0.1.0"
+version = "0.1.1"
 
 [project.urls]
 Issue = "https://github.com/cofin/mogemma/issues/"
 Source = "https://github.com/cofin/mogemma"
 
 [project.optional-dependencies]
-embed = [
-    "numpy>=1.26.0",
-]
-text = [
-    "numpy>=1.26.0",
-    "tokenizers>=0.15.0",
-]
 telemetry = [
     "opentelemetry-api>=1.39.1",
 ]
-all = [
-    "numpy>=1.26.0",
-    "tokenizers>=0.15.0",
-    "huggingface-hub>=0.20.0",
-    "opentelemetry-api>=1.39.1",
-]
+
 
 [build-system]
 requires = ["hatchling"]
@@ -57,13 +47,13 @@ package = true
 extra-index-url = ["https://modular.gateway.scarf.sh/simple/"]
 
 [tool.pytest.ini_options]
-testpaths = ["src/py/tests"]
+testpaths = ["src/py/tests", "src/mo/tests"]
 pythonpath = ["src/py"]
 
 [tool.ruff]
 exclude = [".venv", "node_modules", "tmp", ".tmp"]
 line-length = 120
-src = ["src/py/mogemma", "src/py/tests"]
+src = ["src/py/mogemma", "src/py/tests", "src/mo/tests"]
 target-version = "py310"
 
 [tool.ruff.format]
@@ -96,6 +86,15 @@ split-on-trailing-comma = false
   "D107",
   "S101",
 ]
+"src/mo/tests/test_*.py" = [
+  "ARG001",
+  "D100",
+  "D101",
+  "D102",
+  "D103",
+  "D107",
+  "S101",
+]
 
 [tool.mypy]
 exclude = ["tmp/", ".tmp/"]
@@ -104,7 +103,7 @@ python_version = "3.10"
 strict = true
 
 [tool.pyright]
-include = ["src/py/mogemma", "src/py/tests"]
+include = ["src/py/mogemma", "src/py/tests", "src/mo/tests"]
 pythonVersion = "3.10"
 venv = ".venv"
 
@@ -130,7 +129,7 @@ test = [
 allow_dirty = true
 commit = false
 commit_args = "--no-verify"
-current_version = "0.1.0"
+current_version = "0.1.1"
 ignore_missing_files = false
 ignore_missing_version = false
 message = "chore(release): bump to v{new_version}"
