--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,24 +11,27 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
-    "huggingface-hub>=0.20.0",
+    "obstore>=0.2.08",
     "numpy>=1.26.0",
-    "tokenizers>=0.15.0",
+    "safetensors>=0.4.5",
 ]
 description = "Python/Mojo interface for Google Gemma 3 using MAX Engine"
 license = { file = "LICENSE" }
 name = "mogemma"
 readme = "README.md"
 requires-python = ">=3.10"
-version = "0.1.1"
+version = "0.1.0"
 
 [project.urls]
 Issue = "https://github.com/cofin/mogemma/issues/"
 Source = "https://github.com/cofin/mogemma"
 
 [project.optional-dependencies]
+llm = [
+    "tokenizers>=0.15.0",
+]
 telemetry = [
-    "opentelemetry-api>=1.39.1",
+    "opentelemetry-api>=1.35.0",
 ]
 
 
@@ -44,7 +47,7 @@ path = "tools/hatch_build.py"
 
 [tool.uv]
 package = true
-extra-index-url = ["https://modular.gateway.scarf.sh/simple/"]
+prerelease = "allow"
 
 [tool.pytest.ini_options]
 testpaths = ["src/py/tests", "src/mo/tests"]
@@ -85,6 +88,7 @@ split-on-trailing-comma = false
   "D103",
   "D107",
   "S101",
+  "SLF001",
 ]
 "src/mo/tests/test_*.py" = [
   "ARG001",
@@ -118,8 +122,8 @@ lint = ["mypy>=1.13.0", "pyright>=1.1.386", "ruff>=0.14.14"]
 test = [
     "numpy>=1.26.0",
     "tokenizers>=0.15.0",
-    "huggingface-hub>=0.20.0",
-    "opentelemetry-api>=1.39.1",
+    "obstore>=0.2.08",
+    "opentelemetry-api>=1.35.0",
     "pytest>=9.0.2",
     "pytest-cov>=4.0.0",
     "pytest-asyncio>=1.3.0",
@@ -129,7 +133,7 @@ test = [
 allow_dirty = true
 commit = false
 commit_args = "--no-verify"
-current_version = "0.1.1"
+current_version = "0.2.0"
 ignore_missing_files = false
 ignore_missing_version = false
 message = "chore(release): bump to v{new_version}"
