feat(loader): add OrbaxLoader for GCS native checkpoint format
GCS gemma-data bucket distributes models as Orbax/OCDBT checkpoints,
not safetensors. Add tensorstore-based OrbaxLoader, auto_loader factory
to detect format, stricter cache validation, and benchmark loader stubs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "obstore>=0.2.08",
     "numpy>=1.26.0",
     "safetensors>=0.4.5",
+    "tensorstore>=0.1.78",
 ]
 description = "Python/Mojo interface for Google Gemma 3 using MAX Engine"
 license = { file = "LICENSE" }
