--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ Source = "https://github.com/cofin/mogemma"
 
 [project.optional-dependencies]
 llm = [
-    "tokenizers>=0.15.0",
+    "sentencepiece>=0.2.0",
 ]
 telemetry = [
     "opentelemetry-api>=1.35.0",
@@ -122,7 +122,7 @@ build = ["bump-my-version>=0.31.1", "mojo>=0.26.1"]
 lint = ["mypy>=1.13.0", "pyright>=1.1.386", "ruff>=0.14.14"]
 test = [
     "numpy>=1.26.0",
-    "tokenizers>=0.15.0",
+    "sentencepiece>=0.2.0",
     "obstore>=0.2.08",
     "opentelemetry-api>=1.35.0",
     "pytest>=9.0.2",
