chore: Suppress Swig-related DeprecationWarnings in pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,11 @@ prerelease = "allow"
 [tool.pytest.ini_options]
 testpaths = ["src/py/tests", "src/mo/tests"]
 pythonpath = ["src/py"]
+filterwarnings = [
+    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
+    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
+    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
+]
 
 [tool.ruff]
 exclude = [".venv", "node_modules", "tmp", ".tmp"]
