chore: migrate to hatch-mojo build plugin
Replace custom tools/hatch_build.py with the hatch-mojo plugin for
declarative Mojo compilation during wheel builds.

- Switch build-system requires to include hatch-mojo
- Add declarative job config in pyproject.toml
- Update Makefile build target to use uv build --wheel
- Rewrite namespace layout test to verify TOML config
- Update CI workflow path trigger for Mojo sources
- Remove stale code-styleguide files

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - '.github/workflows/publish.yml'
       - 'pyproject.toml'
-      - 'tools/hatch_build.py'
+      - 'src/mo/**/*.mojo'
 
 jobs:
   build-source:
