--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,18 +37,23 @@ telemetry = [
 
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-mojo"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/py/mogemma"]
 
-[tool.hatch.build.hooks.custom]
-path = "tools/hatch_build.py"
+[[tool.hatch.build.targets.wheel.hooks.mojo.jobs]]
+name = "core"
+input = "src/mo/mogemma/core.mojo"
+emit = "python-extension"
+module = "mogemma._core"
+include-dirs = ["src/mo"]
 
 [tool.uv]
 package = true
 prerelease = "allow"
+
 
 [tool.pytest.ini_options]
 testpaths = ["src/py/tests", "src/mo/tests"]
