--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,6 +138,7 @@ test = [
     "pytest>=9.0.2",
     "pytest-cov>=4.0.0",
     "pytest-asyncio>=1.3.0",
+    "tomli>=2.0.0",
 ]
 
 [tool.bumpversion]
