--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ build-backend = "hatchling.build"
 build-frontend = "build"
 test-command = "pytest {project}/src/py/tests"
 test-requires = ["pytest", "pytest-asyncio", "numpy", "sentencepiece", "obstore"]
+manylinux-x86_64-image = "ubuntu:22.04"
+manylinux-aarch64-image = "ubuntu:22.04"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/py/mogemma"]
