--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 authors = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
 classifiers = [
-    "Development Status :: 3 - Alpha",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Programming Language :: Python :: 3 :: Only",
     "Typing :: Typed",
 ]
@@ -21,7 +21,7 @@ license = { file = "LICENSE" }
 name = "mogemma"
 readme = "README.md"
 requires-python = ">=3.10"
-version = "0.1.0"
+version = "0.1.1"
 
 [project.urls]
 Issue = "https://github.com/cofin/mogemma/issues/"
@@ -56,11 +56,6 @@ input = "src/mo/mogemma/core.mojo"
 emit = "python-extension"
 module = "mogemma._core"
 include-dirs = ["src/mo"]
-
-[tool.uv]
-package = true
-prerelease = "allow"
-
 
 [tool.pytest.ini_options]
 testpaths = ["src/py/tests", "src/mo/tests"]
@@ -137,11 +132,8 @@ dev = [
 ]
 build = ["bump-my-version>=0.31.1", "mojo>=0.26.1"]
 lint = ["mypy>=1.13.0", "pyright>=1.1.386", "ruff>=0.14.14"]
-test = [
-    "numpy>=1.26.0",
-    "sentencepiece>=0.2.0",
-    "obstore>=0.2.08",
-    "opentelemetry-api>=1.35.0",
+test = [ 
+    "obstore>=0.2.08", 
     "pytest>=9.0.2",
     "pytest-cov>=4.0.0",
     "pytest-asyncio>=1.3.0",
@@ -152,7 +144,7 @@ test = [
 allow_dirty = true
 commit = false
 commit_args = "--no-verify"
-current_version = "0.2.0"
+current_version = "0.1.1"
 ignore_missing_files = false
 ignore_missing_version = false
 message = "chore(release): bump to v{new_version}"
