fix(ci): use plain build frontend for cibuildwheel
build[uv] requires uv pre-installed in the cibuildwheel environment,
which isn't available on macOS runners. Fall back to standard build.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ build-backend = "hatchling.build"
 
 [tool.cibuildwheel]
 build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
-build-frontend = "build[uv]"
+build-frontend = "build"
 skip = ["*-musllinux_*", "pp*"]
 test-command = "pytest {project}/src/py/tests"
 test-requires = ["pytest", "pytest-asyncio", "numpy", "sentencepiece", "obstore"]
