--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,12 +42,13 @@ build-backend = "hatchling.build"
 
 [tool.cibuildwheel]
 build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
-build-frontend = "build"
+build-frontend = "build[uv]"
 skip = ["*-musllinux_*", "pp*"]
 test-command = "pytest {project}/src/py/tests"
 test-requires = ["pytest", "pytest-asyncio", "numpy", "sentencepiece", "obstore"]
 
 [tool.cibuildwheel.linux]
+before-all = "pip install uv"
 repair-wheel-command = ""
 
 [tool.cibuildwheel.macos]
