feat(api): make model config optional and simplify README
- SyncGemmaModel, AsyncGemmaModel, and EmbeddingModel now accept
  str | Config | None (defaults to smallest model gemma3-270m-it)
- Simplify README: remove config boilerplate, add model variant
  selection docs, remove incorrect MAX Engine references
- Fix flaky EOS test by using temperature=0.0 for determinism
- Fix project description to remove MAX Engine reference

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "safetensors>=0.4.5",
     "tensorstore>=0.1.78",
 ]
-description = "Python/Mojo interface for Google Gemma 3 using MAX Engine"
+description = "Python/Mojo interface for Google Gemma 3"
 license = { file = "LICENSE" }
 name = "mogemma"
 readme = "README.md"
