--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,12 +43,14 @@ build-backend = "hatchling.build"
 [tool.cibuildwheel]
 build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
 build-frontend = "build[uv]"
-skip = ["*-musllinux_*", "pp*"]
+skip = ["*-musllinux_*", "*-win*", "pp*"]
 test-command = "pytest {project}/src/py/tests"
-test-requires = ["pytest", "pytest-asyncio", "numpy", "sentencepiece", "obstore"]
+test-requires = ["pytest", "pytest-asyncio", "numpy", "sentencepiece", "obstore", "opentelemetry-api"]
 
 [tool.cibuildwheel.linux]
 before-all = "pip install uv"
+manylinux-x86_64-image = "manylinux_2_34"
+manylinux-aarch64-image = "manylinux_2_34"
 repair-wheel-command = ""
 
 [tool.cibuildwheel.macos]
