--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,8 +30,8 @@ jobs:
           name: source-dist
           path: dist/*.tar.gz
 
-  build-wheel-mojo:
-    name: Build Mojo wheel (${{ matrix.os }})
+  build-wheels:
+    name: Build wheels (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -39,57 +39,19 @@ jobs:
         os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v4
-
       - name: Install uv
         uses: astral-sh/setup-uv@v4
-
-      - name: Set up Python
-        run: uv python install 3.12
-
-      - name: Install dependencies
-        run: uv sync --all-extras --dev
-
-      - name: Build Mojo-compiled wheel
-        run: uv build --wheel
-
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.22.0
       - name: Upload wheel artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-mojo-${{ matrix.os }}
-          path: dist/*.whl
-
-  test-wheels:
-    name: Test wheel (${{ matrix.os }})
-    needs: [build-wheel-mojo]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v4
-
-      - name: Set up Python
-        run: uv python install 3.12
-
-      - name: Download wheel
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-mojo-${{ matrix.os }}
-          path: dist/
-
-      - name: Test wheel installation
-        run: |
-          uv venv test-env --python 3.12
-          uv pip install --python test-env --find-links dist/ mogemma
-          uv run --python test-env python -c "import mogemma; print('Wheel OK')"
+          name: wheels-${{ matrix.os }}
+          path: ./wheelhouse/*.whl
 
   publish-release:
     name: Publish to PyPI
-    needs: [build-source, build-wheel-mojo, test-wheels]
+    needs: [build-source, build-wheels]
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -106,17 +68,12 @@ jobs:
           name: source-dist
           path: dist/
 
-      - name: Download wheels (ubuntu)
+      - name: Download wheels
         uses: actions/download-artifact@v4
         with:
-          name: wheels-mojo-ubuntu-latest
+          pattern: wheels-*
           path: dist/
-
-      - name: Download wheels (macos)
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-mojo-macos-latest
-          path: dist/
+          merge-multiple: true
 
       - name: List built packages
         run: ls -la dist/
