--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 authors = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
 classifiers = [
-    "Development Status :: 3 - Alpha",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Programming Language :: Python :: 3 :: Only",
     "Typing :: Typed",
 ]
@@ -16,12 +16,12 @@ dependencies = [
     "safetensors>=0.4.5",
     "tensorstore>=0.1.78",
 ]
-description = "Python/Mojo interface for Google Gemma 3 using MAX Engine"
+description = "Python/Mojo interface for Google Gemma 3"
 license = { file = "LICENSE" }
 name = "mogemma"
 readme = "README.md"
 requires-python = ">=3.10"
-version = "0.1.0"
+version = "0.1.1"
 
 [project.urls]
 Issue = "https://github.com/cofin/mogemma/issues/"
@@ -37,8 +37,24 @@ telemetry = [
 
 
 [build-system]
-requires = ["hatchling", "hatch-mojo"]
+requires = ["hatchling", "hatch-mojo", "mojo>=0.26.1"]
 build-backend = "hatchling.build"
+
+[tool.cibuildwheel]
+build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
+build-frontend = "build[uv]"
+skip = ["*-musllinux_*", "*-win*", "pp*"]
+test-command = "pytest {project}/src/py/tests"
+test-requires = ["pytest", "pytest-asyncio", "numpy", "sentencepiece", "obstore", "opentelemetry-api"]
+
+[tool.cibuildwheel.linux]
+before-all = "pip install uv"
+manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64"
+manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"
+repair-wheel-command = ""
+
+[tool.cibuildwheel.macos]
+repair-wheel-command = ""
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/py/mogemma"]
@@ -49,11 +65,6 @@ input = "src/mo/mogemma/core.mojo"
 emit = "python-extension"
 module = "mogemma._core"
 include-dirs = ["src/mo"]
-
-[tool.uv]
-package = true
-prerelease = "allow"
-
 
 [tool.pytest.ini_options]
 testpaths = ["src/py/tests", "src/mo/tests"]
@@ -130,11 +141,8 @@ dev = [
 ]
 build = ["bump-my-version>=0.31.1", "mojo>=0.26.1"]
 lint = ["mypy>=1.13.0", "pyright>=1.1.386", "ruff>=0.14.14"]
-test = [
-    "numpy>=1.26.0",
-    "sentencepiece>=0.2.0",
-    "obstore>=0.2.08",
-    "opentelemetry-api>=1.35.0",
+test = [ 
+    "obstore>=0.2.08", 
     "pytest>=9.0.2",
     "pytest-cov>=4.0.0",
     "pytest-asyncio>=1.3.0",
@@ -145,7 +153,7 @@ test = [
 allow_dirty = true
 commit = false
 commit_args = "--no-verify"
-current_version = "0.2.0"
+current_version = "0.1.1"
 ignore_missing_files = false
 ignore_missing_version = false
 message = "chore(release): bump to v{new_version}"
