--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,9 +50,10 @@ test-requires = ["pytest", "pytest-asyncio", "numpy", "sentencepiece", "obstore"
 [tool.cibuildwheel.linux]
 before-all = [
     "dnf install -y gcc-toolset-13-gcc-c++",
+    "cp -af /opt/rh/gcc-toolset-13/root/usr/lib64/libstdc++.so.6* /lib64/",
+    "ldconfig",
     "pip install uv",
 ]
-environment = { LD_LIBRARY_PATH = "/opt/rh/gcc-toolset-13/root/usr/lib64" }
 manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64"
 manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"
 repair-wheel-command = ""
