fix: bind-mount host libstdc++ into manylinux container for GLIBCXX_3.4.30
Red Hat's gcc-toolset doesn't ship a runtime libstdc++.so.6 — it only
provides static linkage via libstdc++_nonshared.a. Instead, bind-mount
the Ubuntu runner's libstdc++.so.6 (which has GLIBCXX_3.4.30+) directly
into the container via cibuildwheel's container-engine config.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,12 +48,8 @@ test-command = "pytest {project}/src/py/tests"
 test-requires = ["pytest", "pytest-asyncio", "numpy", "sentencepiece", "obstore", "opentelemetry-api", "tomli"]
 
 [tool.cibuildwheel.linux]
-before-all = [
-    "dnf install -y gcc-toolset-13-gcc-c++",
-    "find /opt/rh/gcc-toolset-13/ -name 'libstdc*' -ls 2>&1 || true",
-    "strings /lib64/libstdc++.so.6 | grep GLIBCXX | tail -5",
-    "pip install uv",
-]
+before-all = "pip install uv"
+container-engine = { name = "docker", create-args = ["-v", "/usr/lib/x86_64-linux-gnu/libstdc++.so.6:/lib64/libstdc++.so.6"] }
 manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64"
 manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"
 repair-wheel-command = ""
