feat(ci): add Linux aarch64 support via QEMU emulation
- Add docker/setup-qemu-action for arm64 emulation on Linux runners
- Set CIBW_ARCHS_LINUX and CIBW_ARCHS_MACOS explicitly
- Add OS classifiers to pyproject.toml
- Document full platform matrix in release-runbook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [project]
 authors = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
 classifiers = [
+    "Operating System :: MacOS",
+    "Operating System :: POSIX :: Linux",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
