fix(ci): download arch-specific libstdcxx for aarch64 builds
Detect container architecture via uname -m and download the
matching conda-forge libstdcxx package (x86_64 vs aarch64).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,9 +52,9 @@ test-requires = ["pytest", "pytest-asyncio", "numpy", "sentencepiece", "obstore"
 [tool.cibuildwheel.linux]
 before-all = [
     "dnf install -y zstd unzip",
-    "curl -sL https://conda.anaconda.org/conda-forge/linux-64/libstdcxx-14.3.0-h934c35e_18.conda -o /tmp/pkg.conda",
+    "if [ $(uname -m) = x86_64 ]; then CONDA_SUBDIR=linux-64 CONDA_BUILD=h934c35e_18; else CONDA_SUBDIR=linux-aarch64 CONDA_BUILD=hef695bb_18; fi && curl -sL https://conda.anaconda.org/conda-forge/${CONDA_SUBDIR}/libstdcxx-14.3.0-${CONDA_BUILD}.conda -o /tmp/pkg.conda",
     "cd /tmp && unzip -o pkg.conda",
-    "cd /tmp && zstd -d pkg-libstdcxx-14.3.0-h934c35e_18.tar.zst -o pkg.tar",
+    "cd /tmp && zstd -d pkg-libstdcxx-14.3.0-*.tar.zst -o pkg.tar",
     "mkdir -p /tmp/out && tar xf /tmp/pkg.tar -C /tmp/out",
     "cp -a /tmp/out/lib/libstdc++.so* /lib64/ && ldconfig",
     "pip install uv",
