fix: skip delocate on macOS — it errors before --exclude is applied
delocate resolves the full dependency tree before applying --exclude
filters, so it crashes with DelocationError when Mojo runtime dylibs
aren't on disk. macOS wheels already get valid macosx_* platform tags
from the build system, so delocate isn't needed.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"
 repair-wheel-command = "auditwheel repair --exclude libKGENCompilerRTShared.so --exclude libAsyncRTRuntimeGlobals.so --exclude libMSupportGlobals.so --exclude libNVPTX.so --exclude libAsyncRTMojoBindings.so -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.macos]
-repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} --exclude libKGENCompilerRTShared --exclude libAsyncRTRuntimeGlobals --exclude libMSupportGlobals --exclude libNVPTX --exclude libAsyncRTMojoBindings -w {dest_dir} -v {wheel}"
+repair-wheel-command = ""
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/py/mogemma"]
