--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,8 +61,10 @@ before-all = [
 ]
 manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64"
 manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"
+repair-wheel-command = "auditwheel repair --exclude libKGENCompilerRTShared.so --exclude libAsyncRTRuntimeGlobals.so --exclude libMSupportGlobals.so --exclude libNVPTX.so --exclude libAsyncRTMojoBindings.so -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.macos]
+repair-wheel-command = ""
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/py/mogemma"]
