fix(build): bundle Mojo runtime libs into wheel with patchelf
Replace auditwheel --exclude with a custom repair script that copies
the 5 Mojo runtime .so files into the wheel under mogemma.libs/ and
uses patchelf to set RPATH so _core.so resolves them at runtime.

Skip delocate on macOS — it errors before --exclude is applied because
it resolves the full dependency tree first. macOS wheels already get
valid macosx_* platform tags from the build system.

- Add tools/repair-wheel-linux.sh (find modular libs, copy, patchelf)
- Add before-build to install mojo and wheel in cibuildwheel build env
- Add test asserting repair command points to the script
- Bump version to 0.1.2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ license = { file = "LICENSE" }
 name = "mogemma"
 readme = "README.md"
 requires-python = ">=3.10"
-version = "0.1.1"
+version = "0.1.2"
 
 [project.urls]
 Issue = "https://github.com/cofin/mogemma/issues/"
@@ -61,7 +61,8 @@ before-all = [
 ]
 manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64"
 manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"
-repair-wheel-command = "auditwheel repair --exclude libKGENCompilerRTShared.so --exclude libAsyncRTRuntimeGlobals.so --exclude libMSupportGlobals.so --exclude libNVPTX.so --exclude libAsyncRTMojoBindings.so -w {dest_dir} {wheel}"
+before-build = "python -m pip install 'mojo>=0.26.1' wheel"
+repair-wheel-command = "bash ./tools/repair-wheel-linux.sh {dest_dir} {wheel}"
 
 [tool.cibuildwheel.macos]
 repair-wheel-command = ""
@@ -163,7 +164,7 @@ test = [
 allow_dirty = true
 commit = false
 commit_args = "--no-verify"
-current_version = "0.1.1"
+current_version = "0.1.2"
 ignore_missing_files = false
 ignore_missing_version = false
 message = "chore(release): bump to v{new_version}"
